# people_detection_ros2

./: README.md  package.xml  params.yml.sample  requirements.txt  setup.py
people_detection_ros2/: package.xml  people_detection_node.py  people_detection_wrapper.py  setup.cfg  setup.py
people_detection_ros2/people_detection_ros2/: people_detection_node.py  people_detection_wrapper.py
people_detection_ros2_msg/: CMakeLists.txt  package.xml
people_detection_ros2_msg/msg/: People.msg
